--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,5 +1,5 @@
-<h1>Add a person</h1>
-<% form_for(@person,url: person_path) do |f| %>
+
+<%= form_for @person , url: people_path do |f| %>
         <% if @person.errors.any? %>
             <div id="errors"><h2><%= pluralize(@person.errors.count, 'Error') %></h2>
               <ul>
