Refactor person/show.html.erb

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,4 +1,16 @@
 <p>Name:</p><%= @person.name %><br>
 <p><strong>Bio:</strong></p><%= @person.bio %>
+<% #if @person.acted_movies ==1 %>
+    <p>Starring Movies:</p>
+    <% @person.acted_movies.each do |movie| %>
+        <p><%= link_to movie.title, movie_path(movie.id) %></p>
+    <% end %>
+<%# end %>
+<%# if @person.directed_movies ==1 %>
+<p>Directed Movies:</p>
+    <% @person.directed_movies.each do |movie| %>
+        <p><%= link_to movie.title, movie_path(movie.id) %></p>
+    <% end %>
+<%# end %>
 | <%= link_to 'Edit', edit_person_path%>
 | <%= link_to 'Delete', person_path(@person) , method: :delete, data: {confirm: 'Are you sure?'} %>
