--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -23,4 +23,6 @@
 
 <% @movie.actors.each do |actor| %>
   <p><%= link_to actor.name, person_path(actor.id) %></p>
-<% end %> 
+<% end %>
+
+    |<%= link_to 'New Movie', new_movie_path %>
