--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,3 +6,4 @@
     | <%= link_to 'Delete', person_path(person) , method: :delete, data: {confirm: 'Are you sure?'} %>
 <hr>
 <% end %>
+    | <%= link_to 'New Person', new_person_path %>
