--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Movie</h1>
 
-<%= form_for(@movie) do |f| %>
+<%= form_for @movie, url: movies_path do |f| %>
   <% if @movie.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
@@ -55,7 +55,7 @@
       <%= f.label person.name %>
     <% end %>
   </div>
-
+    <p><%= f.file_field :avatar %></p>
   <div class="actions">
     <%= f.submit %>
   </div>
