--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -19,8 +19,7 @@
   </div>
 
   <div class="field">
-    <%= f.label "Poster (paper_clip gem'i yüklendikten sonra düzenlenecek" %><br>
-    <%= f.text_field :poster %>
+    <p><%= f.file_field :avatar %></p>
   </div>
 
   <div class="field">
