Bugfix and devise added to project

--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -20,7 +20,7 @@
 
   <div class="field">
     <%= f.label :poster %><br>
-    <%= f.file_field :poster %>
+    <%= f.file_field :avatar %>
   </div>
 
   <div class="field">
