--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,8 +1,8 @@
 <% @genres.each do |genre| %>
 
-    <p><strong>Genre Name:</strong><%= genre.name %><br></p>
+    <p><strong>Genre Name:</strong><%= link_to genre.name, genre_path(genre) %><br></p>
     | <%= link_to 'Edit', edit_genre_path(genre)%>
     | <%= link_to 'Delete', genre_path(genre) , method: :delete, data: {confirm: 'Are you sure?'} %>
     <hr>
 <% end %>
-    | <%= link_to 'New Genre', new_genre_path %>
+    | <%= link_to 'New Movie', new_genre_path %>
