Validates added to models

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= link_to 'Movies', movies_path %>|<%= link_to 'Genres', genres_path %>|<%= link_to 'People', people_path %><br>
 
 <%= yield %>
 
