Add movies rating

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -5,4 +5,4 @@
     | <%= link_to 'Delete', genre_path(genre) , method: :delete, data: {confirm: 'Are you sure?'} %>
     <hr>
 <% end %>
-    | <%= link_to 'New Movie', new_genre_path %>
+    | <%= link_to 'New Genre', new_genre_path %>
