--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,3 +8,4 @@
     <hr>
 <% end %>
 | <%= link_to 'New movie', new_movie_path %>
+|<%= link_to "Sign out" , destroy_user_session_path , method: :delete %>
