--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the movies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+body {
+  margin: 0 auto;
+  padding-left: 200px;
+
+}
+h1 {
+  font-family: 'Open Sans', sans-serif;
+
+}
+a {
+  padding: 5px;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+  color: blue;
+
+
+}
+p {
+  font-family: 'Open Sans', sans-serif;
+}
