Cancan added and rails admin permision

--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -42,18 +42,14 @@
 
   <div class="field">
     <%= f.label :directors %><br>
-    <% @people.each do |person| %>
-      <%= check_box_tag 'director_ids[]', person.id, (@movie.director_ids.include? person.id) ? true : false %>
-      <%= f.label person.name %>
-    <% end %>
+    <%= f.collection_check_boxes :director_ids, @people, :id, :name  %>
+
   </div>
 
   <div class="field">
     <%= f.label :actors %><br>
-    <% @people.each do |person| %>
-      <%= check_box_tag 'actor_ids[]', person.id, (@movie.actor_ids.include? person.id) ? true : false %>
-      <%= f.label person.name %>
-    <% end %>
+    <%= f.collection_check_boxes :actor_ids, @people, :id, :name  %>
+
   </div>
 
   <div class="actions">
