--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,11 +6,15 @@
     <%= image_tag movie.avatar.url(:thumb) %>
 
   <%= link_to movie.title, movie_path(movie) %><br>
-    | <%= link_to 'Edit', edit_movie_path(movie)%>
-    | <%= link_to 'Delete', movie_path(movie) , method: :delete, data: {confirm: 'Are you sure?'} %>
-
-    <hr>
+    <% if  current_user && current_user.admin? %>
+        | <%= link_to 'Edit', edit_movie_path(movie)%>
+        | <%= link_to 'Delete', movie_path(movie) , method: :delete, data: {confirm: 'Are you sure?'} %>
+        <hr>
+    <% end %>
 <% end %>
-
 | <%= link_to 'New movie', new_movie_path %>
-|<%= link_to "Sign out" , destroy_user_session_path , method: :delete %>
+<% if current_user %>
+    |<%= link_to "Sign out" , destroy_user_session_path , method: :delete %>
+<% else %>
+    | <%= link_to 'Sign In', new_user_session_path %>
+<% end %>
